--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -35,7 +35,11 @@ jobs:
           WIZ_CLIENT_SECRET: ${{ secrets.WIZ_CLIENT_SECRET }}
 
       - name: Run wiz-cli docker image scan
-        run: ./wizcli docker scan --image $TAG --policy "$POLICY"
+        run: ./wizcli docker scan --image $TAG --policy "$POLICY" --output results.sarif,sarif
 
       - name: Fetch digest of Docker image for Graph enrichment
         run: ./wizcli docker tag --image $TAG
+
+      - uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: results.sarif
